Реализована функция подсчета энтропии пароля, и добавлен прогресс бар для ее отображения пользователю.

--- a/client_side/resources/style.qss
+++ b/client_side/resources/style.qss
@@ -126,3 +126,14 @@ QMenuBar::item:selected {{
     background-color: {accent};
     color: {bg};
 }}
+
+QProgressBar {{
+    border: 1px solid #999;
+    border-radius: 5px;
+    text-align: center;
+    font-weight: bold;
+}}
+
+QProgressBar::chunk {{
+    border-radius: 5px;
+}}
